test/libsolidity/syntaxTests/nameAndTypeResolution/354_payable_in_library.sol
library test {
    function f() payable public {}
}
// ----
// TypeError 7708: (19-49): Library functions cannot be payable.
